# ai-watermark-recovery

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_PLAN.md  Dockerfile  LICENSE  README.md  alembic.ini  copilot-instructions.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
backend/app/: main.py  worker.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  security.py
backend/app/models/: __init__.py  image.py  job.py  user.py
backend/app/routes/: auth.py  health.py  images.py  jobs.py  watermark.py
backend/app/schemas/: __init__.py  detection.py  image.py  job.py  user.py
backend/app/tasks/: image_tasks.py  pipeline_tasks.py
backend/ml/: adn.py  asl.py  crypto.py  ddim_inversion.py  decoder.py  diffusion_restore.py  discrepancy.py  ecdsa_signer.py  encoder.py  forgery_detector.py  igrm.py  iiwn.py  jsnet.py  keypoint_detector.py  latent_embed.py  losses.py  model_loader.py  perceptual_hash.py  pixel_embed.py  stn_crop.py  unet_restore.py
backend/training/: curriculum.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ClickSpark.tsx  DecryptedText.tsx  DetectWorkflow.tsx  Effects.tsx  EmbedWorkflow.tsx  GooeyNav.css  GooeyNav.tsx  Hero.tsx  ImageUploader.tsx  Interactive.tsx  Navbar.tsx  SpotlightCard.css  SpotlightCard.tsx
frontend/src/hooks/: useWatermarkJob.ts
frontend/src/styles/: globals.css
frontend/src/utils/: sfx.ts
tests/: test_health.py  test_phase2_asl.py  test_phase3_igrm.py  test_phase4_dual.py  test_phase5_metaseal.py  test_phase6_api.py  test_sanity.py
